--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
 					</div>
 				</div>
 			</div>
-
+			<!-- Search Bar -->
+			<div class="searchBlock" id="searchBlock">
+				<div class="search">
+					<input type="search" id="searchBar" placeholder="I want to look up..." name="q"/>
+				</div>
+			</div>
 			<div class="linksBlock" id="linksBlock">
 				<div class="linksBlockLeft" id="linksBlockLeft"></div>
 				<div class="linksBlockRight" id="linksBlockRight"></div>
