--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 			</div>
 			<!-- Search Bar -->
 			<div class="searchBlock" id="searchBlock">
-				<input type="search" id="searchBar" placeholder="I want to look up..." name="q"/>
+				<form id="formsearch" action=https://www.google.com/search">
+					<input type="search" id="searchBar" placeholder="I want to look up..." name="q"/>
+				</form>
 			</div>
 			<div class="linksBlock" id="linksBlock">
 				<div class="linksBlockLeft" id="linksBlockLeft"></div>
