--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 			<!-- Search Bar -->
 			<div class="searchBlock" id="searchBlock">
-				<form id="formsearch" action="https://www.google.com/search>
+				<form id="formsearch" action='https://www.google.com/search'>
 					<input type="search" id="searchBar" placeholder="I want to look up..." name="q"/>
 				</form>
 			</div>
