--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<!-- Search Bar -->
 			<div class="searchBlock" id="searchBlock">
 				<form id="formsearch" action='https://www.google.com/search'>
-					<input type="search" id="searchBar" placeholder="I want to look up..." name="q"/>
+					<input type="search" id="searchBar" placeholder="I want to look up..." name="q" autofocus/>
 				</form>
 			</div>
 			<div class="linksBlock" id="linksBlock">
